Added joystick image

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,5 @@
 Art used:
+example/qml/main/images/joystick.png: Erik Schilling, CC0
+example/qml/main/images/joystick_frame.png: Erik Schilling, CC0
 example/qml/main/images/roundbutton.png: Erik Schilling, CC0
 example/qml/main/images/roundbutton_pressed.png: Erik Schilling, CC0
