Added questlog icon

--- a/AUTHORS
+++ b/AUTHORS
@@ -3,3 +3,7 @@ example/qml/main/images/joystick.png: Erik Schilling, CC0
 example/qml/main/images/joystick_frame.png: Erik Schilling, CC0
 example/qml/main/images/roundbutton.png: Erik Schilling, CC0
 example/qml/main/images/roundbutton_pressed.png: Erik Schilling, CC0
+example/qml/main/images/tab_icon_character.png: Thorbjørn Lindeijer, GPLv3 and CC-BY-SA 3.0
+example/qml/main/images/tab_icon_inventory.png: Thorbjørn Lindeijer, GPLv3 and CC-BY-SA 3.0
+example/qml/main/images/tab_icon_questlog.png: Erik Schilling, GPLv3 and CC-BY-SA 3.0
+
