--- a/AUTHORS
+++ b/AUTHORS
@@ -9,3 +9,4 @@ example/qml/main/images/star.png: Thorbjørn Lindeijer & Stephen "Redshrike" Cha
 example/qml/main/images/tab_icon_character.png: Thorbjørn Lindeijer, GPLv3 and CC-BY-SA 3.0
 example/qml/main/images/tab_icon_inventory.png: Thorbjørn Lindeijer, GPLv3 and CC-BY-SA 3.0
 example/qml/main/images/tab_icon_questlog.png: Erik Schilling, GPLv3 and CC-BY-SA 3.0
+example/qml/main/images/frame_with_title.png: Liberated Pixel Cup Asset, GPLv3 and CC-BY-SA 3.0
