New top bar that also displays leveling progress

--- a/AUTHORS
+++ b/AUTHORS
@@ -12,3 +12,4 @@ example/qml/main/images/star.png: Thorbjørn Lindeijer & Stephen "Redshrike" Cha
 example/qml/main/images/tab_icon_character.png: Thorbjørn Lindeijer, GPLv3 and CC-BY-SA 3.0
 example/qml/main/images/tab_icon_inventory.png: Thorbjørn Lindeijer, GPLv3 and CC-BY-SA 3.0
 example/qml/main/images/tab_icon_questlog.png: Erik Schilling, GPLv3 and CC-BY-SA 3.0
+example/qml/main/images/top_bar.png: Thorbjørn Lindeijer, GPLv3 and CC-BY-SA 3.0
