--- a/AUTHORS
+++ b/AUTHORS
@@ -1,6 +1,7 @@
 Art used:
 example/qml/main/images/bigroundbutton.png: Erik Schilling & Thorbjørn Lindeijer, CC0
 example/qml/main/images/bigroundbutton_pressed.png: Erik Schilling & Thorbjørn Lindeijer, CC0
+example/qml/main/images/bottom_frame.png: Thorbjørn Lindeijer, GPLv3 and CC-BY-SA 3.0
 example/qml/main/images/frame_with_title.png: Liberated Pixel Cup Asset, GPLv3 and CC-BY-SA 3.0
 example/qml/main/images/header_ornamental.png: Thorbjørn Lindeijer, GPLv3 and CC-BY-SA 3.0
 example/qml/main/images/joystick.png: Erik Schilling, CC0
