Added money label to inventory page
I'm not entirely happy with how the inventory items scroll behind it,
but it'll do for now.

--- a/AUTHORS
+++ b/AUTHORS
@@ -4,10 +4,12 @@ example/qml/main/images/bigroundbutton_pressed.png: Erik Schilling & Thorbjørn 
 example/qml/main/images/bottom_frame.png: Thorbjørn Lindeijer, GPLv3 and CC-BY-SA 3.0
 example/qml/main/images/frame_with_title.png: Liberated Pixel Cup Asset, GPLv3 and CC-BY-SA 3.0
 example/qml/main/images/header_ornamental.png: Thorbjørn Lindeijer, GPLv3 and CC-BY-SA 3.0
+example/qml/main/images/icon_money.png: Clint Bellanger, CC-BY-SA 3.0 - http://heroinedusk.com
 example/qml/main/images/joystick.png: Erik Schilling, CC0
 example/qml/main/images/joystick_frame.png: Erik Schilling, CC0
 example/qml/main/images/roundbutton.png: Erik Schilling, CC0
 example/qml/main/images/roundbutton_pressed.png: Erik Schilling, CC0
+example/qml/main/images/scroll_footer.png: Thorbjørn Lindeijer, GPLv3 and CC-BY-SA 3.0
 example/qml/main/images/scroll_header.png: Thorbjørn Lindeijer, GPLv3 and CC-BY-SA 3.0
 example/qml/main/images/star.png: Thorbjørn Lindeijer & Stephen "Redshrike" Challener, GPLv3 and CC-BY-SA 3.0
 example/qml/main/images/tab_icon_character.png: Thorbjørn Lindeijer, GPLv3 and CC-BY-SA 3.0
